# aoc

./: .env  .gitignore  flake.nix  pyproject.toml
aoc/: __main__.py  cli.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  render.py  utils.py
tests/: test_app.py  test_day1.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py
