[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["JP <dragonginger10@gmail.com>"]
packages = [
  { include = "template" }
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
